tests/errors/syntax/compile_time_param_cannot_have_default_value.odl
main :: () -> void {
    add :: (!a := 0) -> int {
        return a;
    };

    x := add(1);
    printint(x);
    println();
};
